# irpf-investidor

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  Template_InfoCEI.xls  devenv.nix  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release-dev.yml  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.rst  requirements.txt  usage.md  usage.rst
src/irpf_investidor/: __init__.py  __main__.py  b3.py  formatting.py  prompt.py  report_reader.py  responses.py
tests/: __init__.py  conftest.py  test_b3.py  test_formatting.py  test_main.py  test_prompt.py  test_report_reader.py  test_responses.py
