[tool.poetry]
name = "irpf-investidor"
version = "2023.28.9"
description = "IRPF Investidor"
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/irpf-investidor"
repository = "https://github.com/staticdev/irpf-investidor"
documentation = "https://irpf-investidor.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/irpf-investidor/releases"

[tool.poetry.dependencies]
python = ">=3.10"
click = ">=8.0.1"
pandas = ">=2.0.3"
prompt-toolkit = ">=3.0.39"
xlrd = ">=2.0.1"

[tool.poetry.dev-dependencies]
bandit = ">=1.7.4"
black = ">=22.12.0"
coverage = {extras = ["toml"], version = ">=7.2.7"}
flake8 = ">=5.0.4"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=1.4.1"
pep8-naming = ">=0.12.1"
pre-commit = ">=3.3.3"
pre-commit-hooks = ">=4.3.0"
pyfakefs = ">=4.5.3"
Pygments = ">=2.11.2"
pytest = ">=7.4.2"
pytest-mock = ">=3.11.1"
pyupgrade = ">=3.13.0"
safety = ">=2.1.1"
sphinx = ">=7.2.6"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
irpf-investidor = "irpf_investidor.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["irpf_investidor", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["pandas", "pytest_mock", "xlrd"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
