[tool.poetry]
name = "irpf-investidor"
version = "2025.15.5"
description = "IRPF Investidor"
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/irpf-investidor"
repository = "https://github.com/staticdev/irpf-investidor"
documentation = "https://irpf-investidor.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/irpf-investidor/releases"

[tool.poetry.dependencies]
python = ">=3.10"
click = ">=8.1.7"
pandas = ">=2.1.4"
prompt-toolkit = ">=3.0.43"
xlrd = ">=2.0.1"

[tool.poetry.dev-dependencies]
bandit = ">=1.7.4"
black = ">=22.12.0"
coverage = {extras = ["toml"], version = ">=7.2.7"}
flake8 = ">=5.0.4"
flake8-bugbear = ">=23.6.5"
flake8-docstrings = ">=1.6.0"
furo = ">=2023.9.10"
isort = ">=5.10.1"
mypy = ">=1.7.1"
pep8-naming = ">=0.12.1"
pre-commit = ">=3.5.0"
pre-commit-hooks = ">=4.5.0"
pyfakefs = ">=4.5.3"
Pygments = ">=2.11.2"
pytest = ">=7.4.2"
pytest-mock = ">=3.11.1"
pyupgrade = ">=3.15.0"
sphinx = ">=7.2.6"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=4.1.5"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
irpf-investidor = "irpf_investidor.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["irpf_investidor", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["B", "B9", "C", "D", "E", "F", "N", "W"]
ignore = ["E203", "E501", "B905"]
per-file-ignores = { "times.py" = ["N806"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["pandas", "pytest_mock", "xlrd"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
