[project]
name = "irpf-investidor"
dynamic = ["version"]
description = "IRPF Investidor"
authors = [
  { name = "staticdev", email = "staticdev-support@proton.me"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/irpf-investidor"
repository = "https://github.com/staticdev/irpf-investidor"
documentation = "https://irpf-investidor.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.43",
    "xlrd>=2.0.1",
]

[project.scripts]
irpf-investidor = "irpf_investidor.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[project.urls]
Changelog = "https://github.com/staticdev/irpf-investidor/releases"

[dependency-groups]
dev = [
    "coverage[toml]>=7.2.7",
    "furo>=2023.9.10",
    "mypy>=1.7.1",
    "hatch>=1.14.0",
    "nox>=2024.10.9",
    "pre-commit>=3.5.0",
    "pre-commit-hooks>=4.5.0",
    "pyfakefs>=5.8.0",
    "Pygments>=2.11.2",
    "pytest>=7.4.2",
    "pytest-mock>=3.11.1",
    "sphinx>=7.2.6",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "typeguard>=4.1.5",
    "xdoctest[colors]>=0.15.10",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["irpf_investidor", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["B", "B9", "C", "D", "E", "F", "N", "W"]
ignore = ["E203", "E501", "B905"]
per-file-ignores = { "times.py" = ["N806"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["pandas", "pytest_mock", "xlrd"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
